--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Titillium+Web:wght@400;600;700;900&display=swap" rel="stylesheet">
     <title>Calculadora de Gorjeta</title>
 </head>
 <body>
@@ -43,6 +46,26 @@
                     </div> 
                 </div>
             </form>
+        </section>
+
+        <section class="resultados">
+            <div class="gorjeta-total">
+                <p>
+                    <strong>Gorjeta</strong> <br>
+                    / pessoa
+                </p>
+
+                <strong>$ 0.00</strong>
+            </div>
+
+            <div class="total">
+                <p>
+                    <strong>Total</strong> <br>
+                    / pessoa
+                </p>
+
+                <strong>$ 0.00</strong>
+            </div>
         </section>
     </main>
 </body>
